# Xplay

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/joeys/xplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.fsh  vertex.vsh
app/src/main/cpp/: CMakeLists.txt  CppHelper.cpp  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayerBuilder.cpp  IPlayerBuilder.h  XData.cpp  XData.h  XLog.cpp  XThread.cpp  XThread.h  xplay.cpp
app/src/main/cpp/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/data/: XData.cpp  XData.h  XParameter.h
app/src/main/cpp/decode/: AudioDecode.cpp  AudioDecode.h  FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h  VideoDecode.cpp  VideoDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/include/arm64-v8a/libavfilter/: buffersrc.h
app/src/main/cpp/include/arm64-v8a/libavutil/: frame.h
app/src/main/cpp/include/armeabi-v7a/libavcodec/: avcodec.h  d3d11va.h  dxva2.h
app/src/main/cpp/include/armeabi-v7a/libavfilter/: avfilter.h
app/src/main/cpp/include/armeabi-v7a/libavutil/: buffer.h  dict.h  hwcontext_d3d11va.h
app/src/main/cpp/metadata/: CMakeLists.txt  MediaMetadataRetriever.cpp  MediaMetadataRetriever.h  com_joeys_MediaMetadataRetriever.cpp
app/src/main/cpp/player/: IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h  PlayerState.cpp  PlayerState.h
app/src/main/cpp/proxy/: IPlayerProxy.cpp  IPlayerProxy.h
app/src/main/cpp/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  Queue.cpp  Queue.h
app/src/main/cpp/resample/: FFResample.cpp  FFResample.h  IResample.cpp  IResample.h
app/src/main/cpp/sync/: MediaClock.cpp  MediaSync.cpp  MediaSync.h  MediaSync2.cpp  MediaSync2.h
app/src/main/cpp/test/: QueueTest.cpp  QueueTest.h  Ts.cpp
app/src/main/cpp/texture/: XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/utils/: OpenGLUtils.cpp  vecmath.h
app/src/main/cpp/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
app/src/main/cpp/xhandler/: CMakeLists.txt  HandlerThread.h  LooperManager.h  ThreadUtils.cpp  ThreadUtils.h  XHandler.cpp  XHandler.h  XLooper.cpp  XLooper.h  XMessage.h  XMessageQueue.h
app/src/main/cpp/xplayer/: CMakeLists.txt  IObserver.cpp  XThread.cpp  XThread.h  xplay.cpp
app/src/main/cpp/xplayer/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/xplayer/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/xplayer/data/: XData.h  XParameter.cpp  XParameter.h
app/src/main/cpp/xplayer/decode/: AudioDecode.cpp  AudioDecode.h  IDecode.cpp  IDecode.h  VideoDecode.cpp
app/src/main/cpp/xplayer/demux/: FFDemux.cpp  IDemux.cpp  IDemux.h
app/src/main/cpp/xplayer/player/: IPlayer.cpp  MediaPlayer.cpp  MediaPlayer.h  PlayerState.cpp
app/src/main/cpp/xplayer/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  Queue.h
app/src/main/cpp/xplayer/resample/: FFResample.cpp  FFResample.h  IResample.cpp  IResample.h
app/src/main/cpp/xplayer/sync/: MediaClock.cpp  MediaSync2.cpp  MediaSync2.h
app/src/main/cpp/xplayer/test/: QueueTest.cpp  QueueTest.h
app/src/main/cpp/xplayer/texture/: XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/xplayer/utils/: CoordinateUtils.cpp  OpenGLUtils.cpp  vecmath.h
app/src/main/cpp/xplayer/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.h
app/src/main/java/com/joeys/xplay/: CPPHelper.kt  IMediaPlayer.java  MainActivity.kt  Xplay.kt
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/test/java/com/joeys/xplay/: ExampleUnitTest.kt
breakpad-build/: build.gradle
breakpad-build/src/main/cpp/: breakpad.cpp
xplayer/: build.gradle
xplayer/src/androidTest/java/com/joeys/xplayer/: ExampleInstrumentedTest.kt
xplayer/src/main/: AndroidManifest.xml
xplayer/src/main/cpp/: CMakeLists.txt  CppHelper.cpp  CppHelper.h
xplayer/src/main/cpp/include/arm64-v8a/libavcodec/: qsv.h  vdpau.h
xplayer/src/main/cpp/include/arm64-v8a/libavformat/: avformat.h
xplayer/src/main/cpp/include/arm64-v8a/libavutil/: file.h  hwcontext_drm.h
xplayer/src/main/cpp/include/armeabi-v7a/: XLog.h
xplayer/src/main/cpp/metadata/: MediaMetadataRetriever.cpp  com_joeys_MediaMetadataRetriever.cpp
xplayer/src/main/cpp/xhandler/: HandlerThread.cpp  HandlerThread.h  LooperManager.cpp  LooperManager.h  ThreadUtils.h  XHandler.cpp  XHandler.h  XLooper.cpp  XLooper.h  XMessage.cpp  XMessage.h  XMessageQueue.cpp  XMessageQueue.h
xplayer/src/main/cpp/xplayer/: CMakeLists.txt  FFPlayer.cpp  FFPlayer.h  player_android.cpp
xplayer/src/main/cpp/xplayer/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlayer.cpp  SLAudioPlayer.h
xplayer/src/main/cpp/xplayer/data/: DecodeParam.cpp  DecodeParam.h  FrameData.cpp  FrameData.h  PacketData.cpp  PacketData.h  PlayerState.cpp  PlayerState.h
xplayer/src/main/cpp/xplayer/dataStructure/: FrameQueue.cpp  FrameQueue.h  MediaClock.cpp  Queue.h
xplayer/src/main/cpp/xplayer/decode/: AudioDecode.cpp  AudioDecode.h  IDecode.cpp  IDecode.h  VideoDecode.cpp  VideoDecode.h
xplayer/src/main/cpp/xplayer/demux/: Demuxer.cpp  Demuxer.h
xplayer/src/main/cpp/xplayer/player/: AudioPlayer.cpp  AudioPlayer.h  MediaSync.cpp  MediaSync.h  PlayerMessage.h  VideoPlayer.cpp  VideoPlayer.h
xplayer/src/main/cpp/xplayer/resampler/: Resampler.cpp  Resampler.h
xplayer/src/main/cpp/xplayer/utils/: CoordinateUtils.h  MediaPlayerListener.cpp  MediaPlayerListener.h  OpenGLUtils.cpp  vecmath.h
xplayer/src/main/cpp/xplayer/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
xplayer/src/main/cpp/xplayer/video/texture/: XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
(+11 files in other folders)
